# water

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json  Doxyfile  README.md  debugBuildLinux.sh  serverTest.bat  waterComputeTest.bat
app/Debug/linux/: server  serverTest
app/Linux/Debug/: program.cl  server  server.conf  serverTest  settingManagerTest  testCategory.conf
app/Linux/Release/: server  serverTest  settingManagerTest
app/Windows/Debug/: program.cl  server.conf  testCategory.conf  waterCompute.conf
app/Windows/Release/: program.cl
debug/: serverTest
debug/linux/: server  serverTest
debug/web/: README.md  gulpfile.js  jsdoc.json  package-lock.json  package.json
debug/web/compile/: index.html  script.js  script.js.map  style.css
debug/web/doc/: global.html  index.html  quicksearch.html  webGLobject.html
doc/html/: _c_kernel_8cpp.html  _c_kernel_8cpp__incl.map  _c_kernel_8cpp__incl.md5  _c_mem_object_8cpp.html  _c_mem_object_8cpp__incl.map  _c_mem_object_8cpp__incl.md5  _c_net_2_c_net_8cpp.html  _c_net_2_c_net_8cpp__incl.map  _c_net_2_c_net_8cpp__incl.md5  _c_net_8hpp.html  _c_net_8hpp__dep__incl.map  _c_net_8hpp__dep__incl.md5  _c_net_8hpp__incl.map  _c_net_8hpp__incl.md5  _c_net_8hpp_source.html  _c_net_handler_8hpp.html  _c_net_handler_8hpp__dep__incl.map  _c_net_handler_8hpp__dep__incl.md5  _c_net_handler_8hpp__incl.map  _c_net_handler_8hpp__incl.md5  _c_net_handler_8hpp_source.html  _c_net_handler_web_socket_8cpp.html  _c_net_handler_web_socket_8cpp__incl.map  _c_net_handler_web_socket_8cpp__incl.md5  _c_net_handler_web_socket_8cpp_a192fbf7c61a11533e81685e1fd6dcd66_icgraph.map  _c_net_handler_web_socket_8cpp_a192fbf7c61a11533e81685e1fd6dcd66_icgraph.md5  _c_net_handler_web_socket_8cpp_a7c68178db4ad64aed3a844986f220c70_icgraph.map  _c_net_handler_web_socket_8cpp_a7c68178db4ad64aed3a844986f220c70_icgraph.md5  _c_net_handler_web_socket_8hpp.html  _c_net_handler_web_socket_8hpp__dep__incl.map  _c_net_handler_web_socket_8hpp__dep__incl.md5  _c_net_handler_web_socket_8hpp__incl.map  _c_net_handler_web_socket_8hpp__incl.md5  _c_net_handler_web_socket_8hpp_source.html  _c_net_socket_interface_8hpp.html  _c_net_socket_interface_8hpp__dep__incl.map  _c_net_socket_interface_8hpp__dep__incl.md5  _c_net_socket_interface_8hpp_source.html  _c_net_socket_interface_linux_8cpp.html  _c_net_socket_interface_linux_8cpp__incl.map  (+384 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  enums_0.js  enums_1.js  enums_2.js  (+49 more)
doc/latex/: annotated.tex  class_c_clrear.tex  class_c_clrear__coll__graph.md5  class_c_reception.tex  class_c_reception__coll__graph.md5  class_c_reception_a286512c534ff02e51e8217241dd89727_cgraph.md5  class_c_server.tex  class_c_server__coll__graph.md5  class_c_settings_manager.tex  class_c_settings_manager__coll__graph.md5  class_c_water_compute.tex  class_c_water_compute__coll__graph.md5  class_c_water_compute__inherit__graph.md5  class_c_water_compute_a6afba6407dd75a22e2beeac9472fdf6c_cgraph.md5  class_c_water_map.tex  class_c_water_map__coll__graph.md5  class_c_water_map__inherit__graph.md5  class_c_water_open_c_l.tex  class_c_water_open_c_l__inherit__graph.md5  class_c_water_open_c_l_a213bd842a23c3a1d50e90b60d9395143_icgraph.md5  class_net_1_1_c_net.tex  class_net_1_1_c_net__coll__graph.md5  class_net_1_1_c_net_a22a961e8db355efd94539336937b956b_cgraph.md5  class_net_1_1_c_net_a22a961e8db355efd94539336937b956b_icgraph.md5  class_net_1_1_c_net_a2e7bdcc29f062828ecac6f2caa1bbf5c_cgraph.md5  class_net_1_1_c_net_a77d474d293656443de888283db8a74f0_cgraph.md5  class_net_1_1_c_net_a7f66009e63ed53b541331143bb2f4bfb_cgraph.md5  class_net_1_1_c_net_a7f66009e63ed53b541331143bb2f4bfb_icgraph.md5  class_net_1_1_c_net_a802a6ab154226caaa8d70423374b8034_cgraph.md5  class_net_1_1_c_net_handler.tex  class_net_1_1_c_net_handler__coll__graph.md5  class_net_1_1_c_net_handler__inherit__graph.md5  class_net_1_1_c_net_handler_web_socket.tex  class_net_1_1_c_net_handler_web_socket__coll__graph.md5  class_net_1_1_c_net_handler_web_socket__inherit__graph.md5  class_net_1_1_c_net_socket_interface.tex  class_net_1_1_c_net_socket_interface_a250ab776d6ce77b1a905904dce7bf21f_icgraph.md5  class_net_1_1_c_net_socket_interface_a32974d8d814e78f05208eec685376df5_icgraph.md5  class_net_1_1_c_net_socket_interface_a4fceb3945002b0aa62dbc7af4afac76d_icgraph.md5  class_net_1_1_c_net_socket_interface_a52ca61f347f9f08cf0ad85e45f081906_icgraph.md5  (+13 more)
gtest/: CMakeLists.txt
server/: CMakeLists.txt  CReception.cpp  CReception.hpp  CServer.cpp  CServer.hpp  main.cpp
server/CNet/: CMakeLists.txt  CNet.cpp  CNet.hpp  CNetLinux.cpp  CNetSocketInterface.hpp  CNetSocketInterfaceLinux.cpp  CNetSocketInterfaceWindows.cpp
server/CNet/Handler/: CNetHandler.hpp  CNetHandlerWebSocket.cpp  CNetHandlerWebSocket.hpp  libwshandshake.hpp
server/unitTests/: CMakeLists.txt  CNet.cpp  CNetLinux.cpp
settingsManager/: CMakeLists.txt
settingsManager/include/: CSettingsManager.hpp
settingsManager/src/: CMakeLists.txt  CSettingsManager.cpp
settingsManager/src/unitTests/: CMakeLists.txt  mainTests.cpp
waterCompute/: CMakeLists.txt
waterCompute/include/: CWaterCompute.hpp  CWaterMap.hpp  CWaterOpenCL.hpp
waterCompute/src/: CKernel.cpp  CMemObject.cpp  CWaterCompute.cpp  CWaterMap.cpp  CWaterOpenCL.cpp
waterCompute/src/cl/: edgeCompute.cl  facesCompute.cl  prepareData.cl
waterCompute/src/unitTests/: CMakeLists.txt  CWaterOpenCL.cpp
web/: gulpfile.js  testModel.ascii.ply  webpack.config.js
web/app/: index.html  script.js  script.js.map  style.css
web/compile/: index.html  script.js  script.js.map
web/doc/: WebGLcontext.html  classes.list.html  global.html  index.html  quicksearch.html  webGLcam.html  webGLcontext.html  webGLobject.html
web/src/: index.html
(+24 files in other folders)
